add changes from @nikosbosse

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -22,7 +22,7 @@ affiliation:
   - code: 2
     address: Chair of Statistics and Econometrics, Karlsruhe Institute of Technology (KIT), Karlsruhe, Germany
 abstract: > 
-  Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts, especially during the COVID-19 pandemic. However, these forecasts require a coordinated team to produce and are effectively black boxes. In other fields, resource usage has been reduced by training simplified models that reproduce some of the observed behaviour of more complex models. Here we use observations of the behaviour of the ECDC forecast ensemble, combined with our own forecasting experience,  to specify a series of model assumptions. We then develop a forecast model using these assumptions and compare its performance to the ECDC forecast hub ensemble in real-time from the 15th of January 2022 to the 19th of July 2022 over a four-week forecast horizon. We found that this surrogate model performed visibly similarly to a subset of example locations though with increased uncertainty. Unsurprisingly, using the weighted interval score, we concluded that average performance was substantially worse but that median performance was more comparable. The majority of the difference in performance was linked to a few forecasts from a period of high incidence. We note that despite performing worse than the hub ensemble the majority of the time our surrogate model was better calibrated, and less liable to underpredict. The central part of the surrogate models forecast distribution performed more similarly to ensemble forecasts distribution whilst the tails of the surrogate forecast distribution were responsible for the large majority of the difference in median forecast performance. We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the implicit epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders' requirements. We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work is potentially useful for forecast consumers as a tool for understanding the inherent assumptions of the forecasts they are making use of and to researchers developing forecast approaches that perform similarly, or better than, current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
+  Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts, especially during the COVID-19 pandemic. However, these forecasts require a coordinated team to produce and are effectively black boxes. In other fields, resource usage has been reduced by training simplified models that reproduce some of the observed behaviour of more complex models. Here we use observations of the behaviour of the ECDC forecast ensemble, combined with our own forecasting experience,  to specify a series of model assumptions. We then develop a forecast model using these assumptions and compare its performance to the ECDC forecast hub ensemble in real-time from the 15th of January 2022 to the 19th of July 2022 over a four-week forecast horizon. We found that this surrogate model performed visibly similarly to a subset of example locations though with increased uncertainty. Unsurprisingly, using the weighted interval score, we concluded that average performance was substantially worse but that median performance was more comparable. The majority of the difference in performance was linked to a few forecasts from a period of high incidence. We note that despite performing worse than the hub ensemble the majority of the time our surrogate model showed better calibration, and was less liable to underpredict. The central part of the surrogate models forecast distribution performed more similarly to ensemble forecasts distribution whilst the tails of the surrogate forecast distribution were responsible for the large majority of the difference in median forecast performance. We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the implicit epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders' requirements. We also conclude that our findings are largely driven by the choice of evaluation measure used by the forecast hub and that if this is misspecified then the forecast hub submissions may not be optimised to forecast users' expectations or requirements. Our work is potentially useful for forecast consumers as a tool for understanding the inherent assumptions of the forecasts they are making use of and to researchers aiming to develop forecast approaches that perform similarly, or better than, current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
 bibliography: library.bib
 output:
   bookdown::pdf_book:
@@ -47,13 +47,13 @@ knitr::opts_chunk$set(
 
 Multi-model and multi-team ensembles have become increasingly popular as an approach to increase the robustness and performance of infectious disease forecasts over the last decade with significant success [@REF].
 These approaches have drawn heavily on the experience of other domains, for example, climate modelling [@REF], where ensembles of both multiple models and from multiple teams have a long history of providing superior forecasts.
-However, ensemble forecasts have a range of potential downsides with the most obvious being their considerable cost to produce as they typically require contributions from multiple independent teams, the development of several models, and a centralised group to run the ensembling project, and that forecasts from these ensembles can be difficult to link to the underlying model assumption.
-In climate forecasting emulation approaches have been used to circumvent some of the resource requirement issues by training a simplified model, usually, a non-parametric statistical model, to replicate the behaviour of either the entire model or sub-components [@REF].
-However, within epidemiological modelling, we often want to use our models for applications other than forecasting and have fewer insights beyond forecast performance on which to base our mechanistic assumptions. 
+However, ensemble forecasts have a range of potential downsides. The most obvious is their considerable cost to produce as they typically require contributions from multiple independent teams, the development of several models, and a centralised group to run the ensembling project. Forecasts from these ensembles can be hard to interpret as it is difficult to link them to the underlying model assumption.
+In climate forecasting, emulation approaches have been used to circumvent some of the resource requirement issues by training a simplified model, usually, a non-parametric statistical model, to replicate the behaviour of either the entire model or sub-components [@REF].
+However, within epidemiological modelling, we often want to use our models for applications other than forecasting (such as learning about underlying disease dynamics or developing scenarios) and have fewer insights beyond forecast performance on which to base our mechanistic assumptions. 
 This means that non-parametric emulation is less suitable for use in epidemiological forecasting though for epidemiological scenario analysis in-sample emulation using non-parametric methods may have a role [@REFLSHTMTBEMULATOR].
 In this work, we propose and evaluate a surrogate forecast model approach which seeks to emulate the observed behaviour of recent COVID-19 forecast ensembles using a minimal set of easily communicated assumptions, limited computational resources, and an easily generalised implementation. 
 
-The trend towards large-scale multi-team ensemble forecasting in infectious diseases has accelerated during the COVID-19 pandemic, partially due to an increased need from stakeholders for reliable forecast models but also due to the perceived low quality of many forecasts otherwise being produced, with the establishment of the CDC forecasting hub [@REF] in early 2020, the Germany/Poland forecast hub [@REF] in late 2020, and ECDC forecast hub [@ECDC] in 2021. All of these collaborations, which the authors (particularly SF and JB have been involved with managing),  ensemble contributions from multiple independent teams using a similar ensembling approach (most recently an unweighted median ensemble [@REF]) and have shown that their ensemble forecasts outperform most individually contributed forecasts whilst remaining generally robust to outliers in reporting [@REF].
+The trend towards large-scale multi-team ensemble forecasting in infectious diseases has accelerated during the COVID-19 pandemic, partially due to an increased need from stakeholders for reliable forecast models but also due to the perceived low quality of many forecasts otherwise being produced, with the establishment of the CDC forecasting hub [@REF] in early 2020, the Germany/Poland forecast hub [@REF] in late 2020, and the ECDC forecast hub [@ECDC] in 2021. All of these collaborations, which the authors (particularly SF and JB) have been involved with managing,  ensembled contributions from multiple independent teams using a similar approach (most recently an unweighted median ensemble [@REF]) and have shown that their ensemble forecasts outperform most individually contributed forecasts whilst remaining generally robust to outliers in reporting [@REF].
 However, they have struggled to provide feedback to those contributing forecasts that would allow them to improve their forecast approaches, have found it difficult to improve the quality of their ensemble forecasts [@REF], and have struggled to maintain incentives for forecasters to continue to contribute which may impact the long-term quality of the ensembles they produce. 
 
 These forecast collaborations, and other similar infectious disease forecasting efforts, have focussed on forecasting reported cases and deaths by epidemiological week (i.e Saturday to Saturday) over a one to four-week time horizon. Generally, ground truth data is available daily, and is updated in retrospect as new data becomes available. Typically, the ensemble forecast produced each week comprises at least 5 independent forecasts using a range of approaches and is produced using an unweighted median ensemble [@REF].
@@ -74,9 +74,10 @@ On the other hand, this also meant that the ensemble was less likely to adopt sh
 Finally, the ensemble forecast tended to produce sharper forecasts and have a tendency towards under vs over predicting.
 There is some suggestion that this was partially driven by the ensemble forecast having non-exponential uncertainty, unlike many infectious disease forecasting models. 
 
-Based on these insights from observing the performance of our forecast submissions and from the hub ensembles over time here we define a model with similar, but simplified, epidemiological characteristics to our previous approaches to model-based forecasting [@REF] with aim of producing ensemble-like performance without sacrificing interpretability.
+Based on these insights from observing the performance of our forecast submissions and from the hub ensembles over time here we define a model with similar, but simplified, epidemiological characteristics to our previous approaches to model-based forecasting [@REF] with the aim of producing ensemble-like performance without sacrificing interpretability.
 The first simplification we make is to model only weekly data, rather than using daily data and then aggregating, this means that the impact of daily reporting artefacts is mitigated.
-It also serves to increase the auto-correlation of the forecasting model as there is an increased lag before changes in daily observations gain significant weight in the model this leads to the observed ensemble behaviour of being relatively auto-correlated and resistant to short-term changes in trend.
+It also serves to increase the auto-correlation of the forecasting model as there is an increased lag before changes in daily observations gain significant weight in the model. 
+This leads to the observed ensemble behaviour of being relatively auto-correlated and resistant to short-term changes in trend.
 The second simplification we make is to ignore the underlying latent infection process and focus only on the observed reported cases.
 This reduces computational requirements and removes the need for external information on the delay from infection to report which can potentially be misspecified leading to potentially reduced forecast performance.
 However, this sacrifices some of the interpretability of the forecast model as any epidemiological summary statistics we now calculate will be based on reported cases and not latent infections.
@@ -85,13 +86,13 @@ The final simplification we make is to model the growth rate as a differenced au
 This represents a parsimonious approach in that we encode our expectation that the growth rate should vary over time and allow this to influence the forecast but we include only a single lag term, reducing the computational overhead of the model.
 To model potential unobserved interventions and more general changes in transmission, we include an additional growth rate modifier restricted to be between 0 and 1 that differs depending on if the growth rate is positive or negative (due to potential differing responses when cases are growing or increasing) and that acts in a multiplicative fashion (meaning that larger absolute growth rates are reduced to zero growth more rapidly).
 This reflects a simplified interpretation of how the ensemble appears to react to potential future changes by assuming a gradual return to stable incidence. 
-The only observation for which we do not make an adaption is the apparent sharpness of the ensemble compared to our prior forecasting models choosing instead to make use of a negative binomial observation model allowing the inclusion of overdispersion. 
+The only observation for which we do not make an adaptation is the apparent sharpness of the ensemble compared to our prior forecasting models choosing instead to make use of a negative binomial observation model allowing the inclusion of overdispersion. 
 This choice is motivated by our belief that the underlying transmission process is an exponential one and therefore a count error model (where variance is linked to the mean)  is a sensible choice though this is an area of current research.
 We suggest that part of the reason the hub ensembles exhibit this behaviour is due to the penalisation of overprediction compared to underprediction caused by the use of a generalised form of absolute error for the majority of forecast evaluations. 
 
 In this study, we define an initial attempt at a surrogate model to replicate the observed behaviour of current multi-team forecast ensembles whilst maintaining a set of clear assumptions and summarising its implementation, with a focus on minimal resource use and reproducibility, as a GitHub action. 
 We briefly outline some of the summary statistics it produces and their epidemiological relevance. 
-We then evaluate its real-time performance in comparison to the ECDC forecast hub ensemble by visualising forecasts, using the weighted interval score [@REF], a commonly used proper scoring rule, and quantifying its empirical coverage.
+We then evaluate its real-time performance in comparison to the ECDC forecast hub ensemble by visualising forecasts, using the weighted interval score [@REF], a commonly used proper scoring rule, and quantifying the empirical coverage of the forecasts produced.
 We attempt to highlight settings where this model performs well as a surrogate to the ensemble forecast and areas where more work is needed. 
 Finally, we summarise our findings, discuss their implications, and highlight areas for potential study. We aim for this work to highlight some of the potential implicit assumptions of current forecast hub ensembles, provide a sensible, low-resource, surrogate model in settings where large-scale collaborative forecasting efforts are not possible, and provide inspiration for forecasters looking to make principled improvements to their models
 
@@ -256,11 +257,11 @@ This process can be defined as follows,
 
 \begin{align*}
   r_0 &\sim \text{Normal}\left(0, 0.25 \right) \\
-  r_t &= \left(\mathcal{H}(r_{t-1} > 0) \xi_{+} + \mathcal{H}(r_{t-1} \le 0) \xi_{-}\right)r_{t-1} + \epsilon_t  \\
+  r_t &= \left(\mathcal{H}[a](r_{t-1} > 0) \xi_{+} + \mathcal{H}(r_{t-1} \le 0) \xi_{-}\right)r_{t-1} + \epsilon_t  \\
   \epsilon_t &= \mathcal{H}(t > 0) \beta \epsilon_{t-1} + \eta_t
 \end{align*}
 
-Where $\mathcal{H}$ is the Heaviside step function and is defined such that it attains the value of 1 if the argument is true and the value of 0 otherwise.
+Where $\mathcal{H}$ is the Heaviside step function and is defined such that it attains the value of 1 if the argument is true and the value of 0 otherwise, and $\epsilon_t$ and $\eta_t$ are error terms. 
 The following priors are used,
 
 \begin{align*}
@@ -363,7 +364,7 @@ We note that our use of a Heaviside step function introduces a discontinuity to 
 The `cmdstanr` R package (`0.5.2`) [@cmdstanr] is used for model fitting with 2 MCMC chains each having 1000 warm-up and 1000 sampling steps each [@cmdstanr].
 `cmstanr` surfaces several settings that trade off between sampling speed and the robustness of the approach.
 Here we take a conservative approach, as the model fit is not manually inspected during real-time usage and due to the expected complexity of the posterior [@betancourt_2017], and set the adapt delta setting to 0.99, and the maximum tree depth setting to 15. 
-For real-time usage convergence was not assessed but during model development, the Rhat diagnostic was used alongside feedback from `cmdstanr` about the number of divergent transitions and exceedance of the maximum tree depth [@cmdstanr]. During development, posterior predictions were also visually compared to observed data.
+For real-time usage, convergence was not assessed, but during model development, the Rhat diagnostic was used alongside feedback from `cmdstanr` about the number of divergent transitions and exceedance of the maximum tree depth [@cmdstanr]. During development, posterior predictions were also visually compared to observed data.
 
 To download and manipulate forecasts from the ECDC forecasting hub [@EuroHub] we use  the `data.table` (`1.14.2`) [@data.table] and `gh` (`1.3.0`) [@gh] R packages.
 We make use of further functionality from the `forecast.vocs` R package [@forecast.vocs] to prepare data for forecasting, visualise forecasts and summary measures, and summarise forecasts.
@@ -401,7 +402,7 @@ Across all forecast dates and locations the minimum number of independent foreca
 
 In our example set of locations, the absolute performance of the ensemble and the surrogate model was similar in all locations at short forecast horizons though this varied by location.
 Performance was most comparable in Slovakia but in the United Kingdom and Germany in particular the surrogate model performed visibly worse for some forecast dates (Figure \@ref(fig:vis-forecasts)).
-For both the ensemble and the surrogate performance visibly decreased as the forecast horizon increased though the relative difference in performance between models was relatively stable across horizons.
+For both the ensemble and the surrogate, performance visibly decreased as the forecast horizon increased though the relative difference in performance between models was relatively stable across horizons.
 In general, in the study period, the ensemble appeared to be liable to underpredict and the surrogate model appeared more likely to over-predict. 
 Both models forecast large reductions in incidence in Poland during May that did not occur whilst only the ensemble forecast spuriously forecast similar large reductions in Germany during June.
 In comparison to the ensemble model the surrogate model appeared less likely to place weight on infeasibly large reductions in incidence during periods of declining incidence but on other hand was more likely to forecast continuing increases in incidence (for example in February in Slovakia and Poland).
@@ -430,7 +431,7 @@ Indicating that the ensemble forecast outperformed the surrogate forecast for al
 However, much of this outperformance was driven by a small subset of forecasts with relative performance having a heavy tail (Figure \@ref(fig:assemble-eval) a). 
 If we instead consider median relative performance (note not a proper scoring rule) we find that, relative to the ensemble, the surrogate scored `r relative_median_wis_by_horizon[horizon == 1, ris]` at the one week horizon, `r relative_median_wis_by_horizon[horizon == 2, ris]` at the two week horizon, `r relative_median_wis_by_horizon[horizon == 3, ris]` at the three week horizon, and `r relative_median_wis_by_horizon[horizon == 4, ris]` at the four week horizon.
 Looking across the distribution of relative scores by horizon we see little evidence that relative forecast quality decreased with time, though the tail of the distribution appears slightly heavier at the four-week time horizon (Figure \@ref(fig:assemble-eval) a).
-`r relative_wis_thresholds[, better_than]` of surrogate forecasts scored better than the comparable ensemble forecast, `r relative_wis_thresholds[, fifty_percent]` performed within 50% of the comparable ensemble forecat, and `r relative_wis_thresholds[, more_than_100_percent]` scored performed worse than 100% more than the comparable ensemble forecast.
+`r relative_wis_thresholds[, better_than]` of surrogate forecasts scored better than the comparable ensemble forecast, `r relative_wis_thresholds[, fifty_percent]` performed within 50% of the comparable ensemble forecast, and `r relative_wis_thresholds[, more_than_100_percent]` scored performed worse than 100% more than the comparable ensemble forecast.
 
 The surrogate model's relative performance varied over time with substantially worse performance from January to March compared to later in the year across all forecast horizons (Figure \@ref(fig:assemble-eval) b).
 The majority of the difference in performance appeared to be driven by a thicker right tail with this being a particular feature of forecasts at longer horizons. Notably, forecast performance in March had a bimodal distribution at the four-week horizon with a substantial fraction of surrogate forecasts outperforming the ensemble.
@@ -507,7 +508,7 @@ Stratifying calibration by quantile and forecast horizon the ensemble forecast w
 In contrast, the surrogate ensemble forecast was generally equally well calibrated at shorter horizons with a tendency to produce conservative forecasts.
 At longer horizons, however, quantiles below the median were liable to have poor coverage suggesting a bias towards over-predicting.
 
-Breaking down the relative weighted interval score by forecast interval we observe that the majority of the difference in overall scores is likely driven by larger intervals and in particular the tails of the forecast (Figure \@ref(fig:plot-coverage) c).
+Breaking down the relative weighted interval score by forecast interval we observe that the majority of the difference in overall scores is likely driven by differences in the outer intervals [b][c][d]and in particular the tails of the forecast (Figure \@ref(fig:plot-coverage) c).
 This is true across forecast horizons but the magnitude of the different increases. This implies that the surrogate and ensemble model produced comparably performing point forecasts and indeed if we consider the absolute error of the median forecasts we see that the median for the ensemble forecast was `r overall_ae_median[model == "Ensemble", round(Median, digits = 1)]` whilst the median for the surrogate forecast was `r overall_ae_median[model == "Surrogate", round(Median, digits = 1)]`.
 However, when we consider the mean absolute error of the median we find that the ensemble forecast outperformed the surrogate forecast (`r overall_ae_median[model == "Ensemble", round(Mean, digits = 1)]` vs. `r overall_ae_median[model == "Surrogate", round(Mean, digits = 1)]`) as noted elsewhere.
 This indicates a right skew in performance for the surrogate model point forecasts not observed for the ensemble forecast which matches that observed when evaluating the full predictive distributions of both forecasts.
@@ -631,3 +632,12 @@ SA and SF were funded by a Wellcome senior fellowship to SF (), KS was funded by
 We thank the ECDC for supporting the forecasting hub, and all forecasters who submitted forecasts for making this study possible. We thank the forecast hub team for publishing all data in an accessible format. We thank Molly for being a good Labrador.
 
 # References
+
+[a]Isn't the indicator function with 1(.) just more common and potentially easier to read?
+[b]I would be very surprised if that were true. The reason is that the outer intervals get tiny weights in the WIS and performance usually is more strongly influenced by the inner intervals.
+[c]This hangs on if the output from score is already weighted or not which I was not clear on?
+[d]Which was my understanding of the implementation (weighting happens in score and summarise_score is just an averaging?)
+
+https://epiforecasts.io/scoringutils/reference/score_quantile.html
+
+Perhaps there is an implementation nuance? I agree I was surprised by the magnitude of this difference.
